hphp/hack/test/typecheck/bad_contra_pos_test.php.like_types.exp
File "bad_contra_pos_test.php", line 20, characters 24-32:
Invalid argument (Typing[4110])
File "bad_contra_pos_test.php", line 17, characters 45-45:
Expected ~[unresolved] because it is an unenforceable type
File "bad_contra_pos_test.php", line 15, characters 11-12:
But got null
